NTR - Update Salutations

--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -8,7 +8,7 @@
                                      v-model="customer.salutationId"
                                      validation="required">
                         <option v-for="salutation in salutations" :key="salutation.id" :value="salutation.id">
-                            {{ salutation.meta.viewData.name }}
+                            {{ salutation.meta.viewData.displayName }}
                         </option>
                     </sw-select-field>
                 {% endblock %}
