--- a/Resources/administration/src/app/component/base/sw-address/sw-address.html.twig
+++ b/Resources/administration/src/app/component/base/sw-address/sw-address.html.twig
@@ -21,8 +21,8 @@
                 {% endblock %}
 
                 {% block sw_address_full_name %}
-                    <div v-if="fullName" class="sw-address__full-name sw-address__line">
-                        {{ fullName }}
+                    <div v-if="address.lastName" class="sw-address__full-name sw-address__line">
+                        {{ address | salutation }}
                     </div>
                 {% endblock %}
 
