--- a/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
@@ -22,7 +22,7 @@
                                       v-model="address.salutationId"
                                       validation="required">
                                 <option v-for="salutation in salutations" :key="salutation.id" :value="salutation.id">
-                                    {{ salutation.meta.viewData.name }}
+                                    {{ salutation.meta.viewData.displayName }}
                                 </option>
                             </sw-field>
                         {% endblock %}
