--- a/Resources/administration/src/module/sw-customer/component/sw-customer-card/sw-customer-card.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-card/sw-customer-card.html.twig
@@ -38,7 +38,7 @@
                                                                              size="small"
                                                                              validation="required">
                                                                 <option v-for="salutation in salutations" :key="salutation.id" :value="salutation.id">
-                                                                    {{ salutation.meta.viewData.name }}
+                                                                    {{ salutation.meta.viewData.displayName }}
                                                                 </option>
                                                             </sw-select-field>
                                                         {% endblock %}
