--- a/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document-card.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document-card.html.twig
@@ -70,7 +70,7 @@
                 <sw-context-button>
 
                     <sw-context-menu-item>
-                        <a class="sw-document-download-button" :href="`/api/v1/_action/document/${item.id}/${item.deepLinkCode}`">
+                        <a class="sw-document-download-button" :href="`/api/v1/_action/document/${item.id}/${item.deepLinkCode}`" target="_blank">
                             {{ $tc('sw-order.documentCard.labelDownloadPdf') }}
                         </a>
                     </sw-context-menu-item>
@@ -85,6 +85,7 @@
                                            :currentDocumentType="currentDocumentType"
                                            :order="order"
                                            @document-modal-leave-page="onCancelModal"
-                                           @document-modal-create-document="onCreateDocument">
+                                           @document-modal-create-document="onCreateDocument"
+                                           @document-modal-show-preview="onPreview">
     </component>
 </sw-card>
