--- a/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.html.twig
+++ b/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.html.twig
@@ -77,6 +77,10 @@
                                     {% endblock %}
                                 </sw-tabs>
                             {% endblock %}
+
+                            {% block sw_plugin_manager_content_sidebar_store_login_status %}
+                                <sw-plugin-store-login-status></sw-plugin-store-login-status>
+                            {% endblock %}
                         </div>
                     {% endblock %}
 
