--- a/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.scss
+++ b/Resources/administration/src/app/component/media/sw-media-base-item/sw-media-base-item.scss
@@ -28,7 +28,10 @@ $sw-media-base-item-preview-background:      $color-white;
         background-color: $sw-media-base-item-color-hover;
 
         .sw-media-base-item__selected-indicator {
-            visibility: visible;
+
+            &.selected-indicator--is-allowed {
+                visibility: visible;
+            }
         }
 
         .sw-context-button {
