--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
@@ -113,6 +113,7 @@
                                                                                  :slot="el.slot"
                                                                                  :key="el.id"
                                                                                  :element="el"
+                                                                                 :pageContext="pageContext"
                                                                                  :active="currentBlock !== null && currentBlock.id === block.id">
                                                                     </sw-cms-slot>
                                                                 {% endblock %}
