--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -1,9 +1,10 @@
 {% block sw_modal %}
     <transition name="sw-modal-fade">
         {% block sw_modal_element %}
-            <div class="sw-modal" :class="modalClasses" @click="closeModalOnClickOutside">
+            <div class="sw-modal" :class="modalClasses" @mousedown="closeModalOnClickOutside" @keyup.esc="closeModalOnEscapeKey">
                 {% block sw_modal_dialog %}
                     <div class="sw-modal__dialog"
+                         :class="identifierClass"
                          :style="{ maxWidth: size }"
                          role="dialog"
                          ref="dialog"
