--- a/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.scss
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-list/sw-cms-list.scss
@@ -33,6 +33,18 @@
         .sw-field {
             margin: 0;
         }
+
+        .sw-simple-search-field {
+            margin-bottom: 0;
+            height: 100%;
+
+            .sw-simple-search-field__input {
+                input {
+                    height: auto;
+                    padding: 10px 20px 10px 45px;
+                }
+            }
+        }
     }
 
     .sw-cms-list__actions-sorting {
